# 05-chat

./: .env  Cargo.toml  README.md  cliff.toml  deny.toml
chat_server/: Cargo.toml
chat_server/src/: config.rs  lib.rs
chat_server/src/handlers/: auth.rs
chat_server/src/middlewares/: request_id.rs
chat_server/src/models/: mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20241209235757_workspace.sql
notify_server/: Cargo.toml
