[workspace]
members = ["chat_server", "notify_server"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
thiserror = "2.0.4"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
